--- a/eas.css
+++ b/eas.css
@@ -1,13 +1,17 @@
 body {
   background-color: red;
+  display: flex;
+  justify-content: center;
 }
 
 .container {
   display: flex;
   flex-wrap: wrap;
+  width: 960px;
 }
 
 .square {
+  width: 6.25%;
   background-color: antiquewhite;
-  border: 2px black solid;
+  height: 45px;
 }
