--- a/eas.css
+++ b/eas.css
@@ -1,19 +1,19 @@
 body {
   background-color: red;
-  display: flex;
-  justify-content: center;
 }
 
 .container {
   display: flex;
   flex-wrap: wrap;
-  width: 960px;
+  width: 90vw;
+  height: 90vh;
+  margin: auto;
 }
 
 .square {
   width: 6.25%;
   background-color: antiquewhite;
-  height: 45px;
+  height: 6.25%;
 }
 
 .hovered {
